// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Confirmation matches snapshot no selection 1`] = `
<div
  className="confirmation-overlay"
  data-analytics-region="region"
  role="alertdialog"
  tabIndex={-1}
>
  <label>
    message
  </label>
  <div
    className="button-group"
  >
    <button
      className="button button-primary button-small"
      data-analytics-label="confirm"
      data-testid="confirm"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "--button-default-active": "#e5e5e5",
          "--button-default-border": "#d5d5d5",
          "--button-default-color": "#fff",
          "--button-default-foreground": "#5e6062",
          "--button-default-hover": "#fafafa",
          "--button-disabled-color": "#f1f1f1",
          "--button-disabled-foreground": "#c1c1c1",
          "--button-focus-outline": "#fff",
          "--button-focus-shadow": "#000",
          "--button-primary-active": "#b03808",
          "--button-primary-color": "#d4450c",
          "--button-primary-foreground": "#fff",
          "--button-primary-hover": "#be3c08",
          "--button-secondary-active": "#818181",
          "--button-secondary-color": "#949494",
          "--button-secondary-foreground": "#fff",
          "--button-secondary-hover": "#8b8b8b",
          "--button-transparent-color": "#027EB5",
        }
      }
    >
      confirm
    </button>
    <button
      className="button button-default button-small"
      data-analytics-label="cancel"
      data-testid="cancel"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "--button-default-active": "#e5e5e5",
          "--button-default-border": "#d5d5d5",
          "--button-default-color": "#fff",
          "--button-default-foreground": "#5e6062",
          "--button-default-hover": "#fafafa",
          "--button-disabled-color": "#f1f1f1",
          "--button-disabled-foreground": "#c1c1c1",
          "--button-focus-outline": "#fff",
          "--button-focus-shadow": "#000",
          "--button-primary-active": "#b03808",
          "--button-primary-color": "#d4450c",
          "--button-primary-foreground": "#fff",
          "--button-primary-hover": "#be3c08",
          "--button-secondary-active": "#818181",
          "--button-secondary-color": "#949494",
          "--button-secondary-foreground": "#fff",
          "--button-secondary-hover": "#8b8b8b",
          "--button-transparent-color": "#027EB5",
        }
      }
    >
      Cancel
    </button>
  </div>
</div>
`;

exports[`Confirmation renders with data-analytics-label and ref 1`] = `
<div
  className="confirmation-overlay"
  data-analytics-label="custom-label"
  role="alertdialog"
  tabIndex={-1}
>
  <label>
    message
  </label>
  <div
    className="button-group"
  >
    <button
      className="button button-primary button-small"
      data-analytics-label="custom-label"
      data-testid="confirm"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "--button-default-active": "#e5e5e5",
          "--button-default-border": "#d5d5d5",
          "--button-default-color": "#fff",
          "--button-default-foreground": "#5e6062",
          "--button-default-hover": "#fafafa",
          "--button-disabled-color": "#f1f1f1",
          "--button-disabled-foreground": "#c1c1c1",
          "--button-focus-outline": "#fff",
          "--button-focus-shadow": "#000",
          "--button-primary-active": "#b03808",
          "--button-primary-color": "#d4450c",
          "--button-primary-foreground": "#fff",
          "--button-primary-hover": "#be3c08",
          "--button-secondary-active": "#818181",
          "--button-secondary-color": "#949494",
          "--button-secondary-foreground": "#fff",
          "--button-secondary-hover": "#8b8b8b",
          "--button-transparent-color": "#027EB5",
        }
      }
    >
      confirm
    </button>
    <button
      className="button button-default button-small"
      data-analytics-label="cancel"
      data-testid="cancel"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "--button-default-active": "#e5e5e5",
          "--button-default-border": "#d5d5d5",
          "--button-default-color": "#fff",
          "--button-default-foreground": "#5e6062",
          "--button-default-hover": "#fafafa",
          "--button-disabled-color": "#f1f1f1",
          "--button-disabled-foreground": "#c1c1c1",
          "--button-focus-outline": "#fff",
          "--button-focus-shadow": "#000",
          "--button-primary-active": "#b03808",
          "--button-primary-color": "#d4450c",
          "--button-primary-foreground": "#fff",
          "--button-primary-hover": "#be3c08",
          "--button-secondary-active": "#818181",
          "--button-secondary-color": "#949494",
          "--button-secondary-foreground": "#fff",
          "--button-secondary-hover": "#8b8b8b",
          "--button-transparent-color": "#027EB5",
        }
      }
    >
      Cancel
    </button>
  </div>
</div>
`;

exports[`Confirmation works without optional props and drawFocus={true} 1`] = `
<div
  className="confirmation-overlay"
  role="alertdialog"
  tabIndex={-1}
>
  <label>
    message
  </label>
  <div
    className="button-group"
  >
    <button
      className="button button-primary button-small"
      data-analytics-label="confirm"
      data-testid="confirm"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "--button-default-active": "#e5e5e5",
          "--button-default-border": "#d5d5d5",
          "--button-default-color": "#fff",
          "--button-default-foreground": "#5e6062",
          "--button-default-hover": "#fafafa",
          "--button-disabled-color": "#f1f1f1",
          "--button-disabled-foreground": "#c1c1c1",
          "--button-focus-outline": "#fff",
          "--button-focus-shadow": "#000",
          "--button-primary-active": "#b03808",
          "--button-primary-color": "#d4450c",
          "--button-primary-foreground": "#fff",
          "--button-primary-hover": "#be3c08",
          "--button-secondary-active": "#818181",
          "--button-secondary-color": "#949494",
          "--button-secondary-foreground": "#fff",
          "--button-secondary-hover": "#8b8b8b",
          "--button-transparent-color": "#027EB5",
        }
      }
    >
      confirm
    </button>
    <button
      className="button button-default button-small"
      data-analytics-label="cancel"
      data-testid="cancel"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "--button-default-active": "#e5e5e5",
          "--button-default-border": "#d5d5d5",
          "--button-default-color": "#fff",
          "--button-default-foreground": "#5e6062",
          "--button-default-hover": "#fafafa",
          "--button-disabled-color": "#f1f1f1",
          "--button-disabled-foreground": "#c1c1c1",
          "--button-focus-outline": "#fff",
          "--button-focus-shadow": "#000",
          "--button-primary-active": "#b03808",
          "--button-primary-color": "#d4450c",
          "--button-primary-foreground": "#fff",
          "--button-primary-hover": "#be3c08",
          "--button-secondary-active": "#818181",
          "--button-secondary-color": "#949494",
          "--button-secondary-foreground": "#fff",
          "--button-secondary-hover": "#8b8b8b",
          "--button-transparent-color": "#027EB5",
        }
      }
    >
      Cancel
    </button>
  </div>
</div>
`;
